--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@
   background-color: yellow !important;
 }
 
+.better-search-selected
+{
+  background-color:orangered !important;
+}
+
 .better-search {
   vertical-align: middle !important;
   font-family: 'Roboto', sans-serif !important;
@@ -106,9 +111,4 @@
   color: grey !important;
   border-right: 1px solid grey !important;
   line-height: 21px !important;
-}
-
-.highlighted
-{
-    background-color: #00ffffc2;
 }
