--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 
 .better-search-selected
 {
-  background-color:orangered !important;
+  background-color:#ffb54d !important;
 }
 
 .better-search {
