options no new tab

--- a/css/options.css
+++ b/css/options.css
@@ -83,6 +83,7 @@ input:checked+.slider:before {
 
 .options {
     margin-top: 20px;
+    margin-bottom: 20px;
     margin-left: 10px;
     font-family: 'Roboto Mono', monospace;
     font-size: 13px;
