--- a/css/style.css
+++ b/css/style.css
@@ -1,123 +1,117 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
-
 .better-search-highlight {
-  background-color: yellow !important;
+    background-color: yellow !important;
 }
 
-.better-search-selected
-{
-  background-color:#ffb54d !important;
+.better-search-selected {
+    background-color: #ffb54d !important;
 }
 
 .better-search {
-  vertical-align: middle !important;
-  font-family: 'Roboto', sans-serif !important;
-  font-size: 14px !important;
-  line-height: 21px !important;
-  position: fixed !important;
-  top: 10px !important;
-  right: 5% !important;
-  z-index: 999999999999999999999999999999999999999999999999999 !important;
-  display: inline-block !important;
-  box-shadow: 0 0 10px 2px #ccc !important;
-  padding: 10px !important;
-  border-radius: 4px !important;
-  background: white !important;
+    vertical-align: middle !important;
+    font-family: 'Roboto', sans-serif !important;
+    font-size: 14px !important;
+    line-height: 21px !important;
+    position: fixed !important;
+    top: 10px !important;
+    right: 5% !important;
+    z-index: 999999999999999999999999999999999999999999999999999 !important;
+    display: inline-block !important;
+    box-shadow: 0 0 10px 2px #ccc !important;
+    padding: 10px !important;
+    border-radius: 4px !important;
+    background: white !important;
 }
 
 .better-search input.textinput {
-  vertical-align: middle !important;
-  color: grey !important;
-  font-family: 'Roboto', sans-serif !important;
-  background: white !important;
-  border: none !important;
-  background:#eee !important;
-  font-size: 14px !important;
-  padding-top:5px !important;
-  padding-bottom:5px !important;
-  padding-left: 5px !important;
-  padding-right: 10px !important;
-  line-height: 21px !important;
-  border-radius: 4px 0px 0px 4px !important;
+    vertical-align: middle !important;
+    color: grey !important;
+    font-family: 'Roboto', sans-serif !important;
+    background: white !important;
+    border: none !important;
+    background: #eee !important;
+    font-size: 14px !important;
+    padding-top: 5px !important;
+    padding-bottom: 5px !important;
+    padding-left: 5px !important;
+    padding-right: 10px !important;
+    line-height: 21px !important;
+    border-radius: 4px 0px 0px 4px !important;
 }
 
 .better-search input:focus {
-  vertical-align: middle !important;
-  outline:none !important;
-  font-size: 14px !important;
-  line-height: 21px !important;
-  font-family: 'Roboto', sans-serif !important;
+    vertical-align: middle !important;
+    outline: none !important;
+    font-size: 14px !important;
+    line-height: 21px !important;
+    font-family: 'Roboto', sans-serif !important;
 }
 
 .better-search input {
-  background:#eee !important;
-  color: grey !important;
-  vertical-align: middle !important;
-  font-family: 'Roboto', sans-serif !important;
-  background: transparent !important;
-  border: none !important;
-  line-height: 21px !important;
-  padding-left:1px !important;
-  padding-right:1px !important;
-  padding-top: 0px !important;
-  padding-bottom: 0px !important;
-  font-size: 14px !important;
-  margin: 0px !important;
+    background: #eee !important;
+    color: grey !important;
+    vertical-align: middle !important;
+    font-family: 'Roboto', sans-serif !important;
+    background: transparent !important;
+    border: none !important;
+    line-height: 21px !important;
+    padding-left: 1px !important;
+    padding-right: 1px !important;
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
+    font-size: 14px !important;
+    margin: 0px !important;
 }
 
-.better-search .iconContainer{
-  background: #eee !important;
-  line-height: 21px !important;
-  padding-top: 6px !important;
-  padding-bottom: 9px !important;
+.better-search .iconContainer {
+    background: #eee !important;
+    line-height: 21px !important;
+    padding-top: 6px !important;
+    padding-bottom: 9px !important;
 }
 
 .better-search input.inline {
-  vertical-align: middle !important;
-  font-family: 'Roboto', sans-serif !important;
-  margin:-4px !important;
-  padding-left: 5px !important;
-  padding-top: 5px !important;
-  padding-bottom: 5px !important;
-  padding-right: 10px !important;
-
-  border-radius: 0px 4px 4px 0px !important;
-  font-size: 14px !important;
-  line-height: 21px !important;
+    vertical-align: middle !important;
+    font-family: 'Roboto', sans-serif !important;
+    margin: -4px !important;
+    padding-left: 5px !important;
+    padding-top: 5px !important;
+    padding-bottom: 5px !important;
+    padding-right: 10px !important;
+    border-radius: 0px 4px 4px 0px !important;
+    font-size: 14px !important;
+    line-height: 21px !important;
 }
 
 .better-search input.activated {
-  filter: invert(46%) sepia(32%) saturate(4836%) hue-rotate(318deg) brightness(92%) contrast(92%) !important;
+    filter: invert(50%) sepia(40%) saturate(3326%) hue-rotate(184deg) brightness(97%) contrast(97%) !important;
 }
 
-.better-search input.inline:hover  {
-  filter: invert(46%) sepia(32%) saturate(4836%) hue-rotate(318deg) brightness(92%) contrast(92%) !important;
-  vertical-align: middle !important;
-  font-size: 14px !important;
-  font-family: 'Roboto', sans-serif !important;
-  line-height: 21px !important;
+.better-search input.inline:hover {
+    filter: invert(50%) sepia(40%) saturate(3326%) hue-rotate(184deg) brightness(97%) contrast(97%) !important;
+    vertical-align: middle !important;
+    font-size: 14px !important;
+    font-family: 'Roboto', sans-serif !important;
+    line-height: 21px !important;
 }
 
-
-.better-search input.outline  {
-  padding-right: 5px !important;
+.better-search input.outline {
+    padding-right: 5px !important;
 }
 
-.better-search input.outline:hover  {
-  filter: invert(46%) sepia(32%) saturate(4836%) hue-rotate(318deg) brightness(92%) contrast(92%) !important;
+.better-search input.outline:hover {
+    filter: invert(50%) sepia(40%) saturate(3326%) hue-rotate(184deg) brightness(97%) contrast(97%) !important;
 }
 
-
-.better-search label { 
-  padding-right :10px !important;
-  padding-left: 10px !important;
-  padding-top: 0px !important;
-  padding-bottom: 0px !important;
-  margin-right: 10px !important;
-
-  font-size: 14px !important;
-  font-family: 'Roboto', sans-serif !important;
-  color: grey !important;
-  border-right: 1px solid grey !important;
-  line-height: 21px !important;
+.better-search label {
+    padding-right: 10px !important;
+    padding-left: 10px !important;
+    padding-top: 0px !important;
+    padding-bottom: 0px !important;
+    margin-right: 10px !important;
+    font-size: 14px !important;
+    font-family: 'Roboto', sans-serif !important;
+    color: grey !important;
+    border-right: 1px solid grey !important;
+    line-height: 21px !important;
 }
