--- a/css/colors.css
+++ b/css/colors.css
@@ -8,7 +8,7 @@
     --bs-color-shadow: #ccc;
     --bs-color-accent: #2196F3;
     --bs-color-highlight: #ffff00;
-    --bs-color-selected: #ffd1389c;
+    --bs-color-selected: #f9a12e;
 }
 
 [data-theme="dark"] {
